--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seraph-agent",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "An extremely lightweight, SRE autonomous AI agent for seamless integration with common observability tasks.",
   "main": "dist/index.js",
   "bin": {
@@ -35,7 +35,8 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.57.0",
     "@google/generative-ai": "^0.24.1",
-    "commander": "^12.0.0",
+    "@modelcontextprotocol/sdk": "^1.17.0",
+    "commander": "^12.1.0",
     "node-fetch": "^2.7.0",
     "openai": "^5.11.0",
     "prom-client": "^15.1.3"
