fix: Resolve test failures and align project components
- Reworks server startup and shutdown logic to resolve persistent EADDRINUSE errors in tests.
- Converts synchronous file I/O to asynchronous operations in the server and config loading.
- Aligns Helm chart, CLI, and documentation, including adding missing configuration options and correcting outdated examples.
- Hardens LLM response parsing and fixes safe-regex import.

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -85,19 +85,21 @@ affinity: {}
 seraphConfig:
   port: 8080
   workers: 4
+  apiKey: ""
+  serverApiKey: ""
   llm:
     provider: "gemini"
-    model": "gemini-1.5-pro-latest"
+    model: "gemini-1.5-pro-latest"
   alertManager:
     url: ""
   preFilters: []
     # - "level":"debug"
     # - "status":"(200|204)"
+  rateLimit:
+    window: 60000
+    maxRequests: 100
+  recentLogsMaxSizeMb: 10
 
-# Environment variables for API keys
-# It's recommended to use secrets for production deployments
-env:
-  GEMINI_API_KEY: ""
-  ANTHROPIC_API_KEY: ""
-  OPENAI_API_KEY: ""
-  SERAPH_MITIGATION_API_KEY: ""
+# Name of the secret containing the API keys
+secrets:
+  name: "seraph-secrets"
