--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seraph-agent",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "An extremely lightweight, SRE autonomous AI agent for seamless integration with common observability tasks.",
   "main": "dist/index.js",
   "bin": {
@@ -39,7 +39,8 @@
     "commander": "^12.1.0",
     "node-fetch": "^2.7.0",
     "openai": "^5.11.0",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "safe-regex": "^2.1.1"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
