--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
-name: seraph
-description: A Helm chart for the Seraph SRE agent
+name: seraph-agent
+description: A Helm chart for the Seraph Agent, an SRE autonomous AI agent.
 type: application
 version: 0.1.0
-appVersion: "1.0.0"
+appVersion: "1.0.12"
 icon: https://raw.githubusercontent.com/e-solutions-GmbH/seraph/main/docs/logo.png
