Adds agent and worker managers, improve input validation, improve performance

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -63,6 +63,11 @@ spec:
                 secretKeyRef:
                   name: {{ .Values.secrets.name }}
                   key: seraph-mitigation-api-key
+          envFrom:
+            {{- range .Values.additionalSecrets }}
+            - secretRef:
+                name: {{ . }}
+            {{- end }}
           volumeMounts:
             - name: config
               mountPath: /usr/src/app/seraph.config.json
