--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seraph-agent",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "An extremely lightweight, SRE autonomous AI agent for seamless integration with common observability tasks.",
   "main": "dist/index.js",
   "bin": {
@@ -37,16 +37,23 @@
     "@google/generative-ai": "^0.24.1",
     "@modelcontextprotocol/sdk": "^1.17.0",
     "commander": "^12.1.0",
+    "k6": "^0.0.0",
     "node-fetch": "^2.7.0",
     "openai": "^5.12.0",
     "prom-client": "^15.1.3",
-    "safe-regex": "^2.1.1"
+    "safe-regex": "^2.1.1",
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^20.11.24",
     "@types/node-fetch": "^2.6.13",
+    "@types/sqlite3": "^3.1.11",
     "@types/supertest": "^6.0.3",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0-alpha.20",
+    "@typescript-eslint/parser": "^8.0.0-alpha.20",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "jest-serial-runner": "^1.2.2",
