--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   ],
   "author": "Gemini",
   "license": "Apache-2.0",
-  "homepage": "https://https://github.com/InventiveWork/seraph#readme",
+  "homepage": "https://github.com/InventiveWork/seraph#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://https://github.com/InventiveWork/seraph.git"
+    "url": "https://github.com/InventiveWork/seraph.git"
   },
   "bugs": {
-    "url": "https://https://github.com/InventiveWork/seraph/issues"
+    "url": "https://github.com/InventiveWork/seraph/issues"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.57.0",
