--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: seraph-agent
-  pullPolicy: Never
+  repository: inventivework/seraph-agent
+  pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "local"
+  tag: "1.0.15"
 
 imagePullSecrets: []
 nameOverride: ""
