--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -2,6 +2,6 @@ apiVersion: v2
 name: seraph-agent
 description: A Helm chart for the Seraph Agent, an SRE autonomous AI agent.
 type: application
-version: 1.0.19-1
-appVersion: "1.0.19-1"
+version: 1.0.20
+appVersion: "1.0.20"
 icon: https://raw.githubusercontent.com/e-solutions-GmbH/seraph/main/docs/logo.png
