--- a/demo/helm/seraph-demo-values.yaml
+++ b/demo/helm/seraph-demo-values.yaml
@@ -5,7 +5,7 @@ replicaCount: 1
 image:
   repository: seraph-agent
   pullPolicy: Never
-  tag: "1.0.20"
+  tag: "1.0.21"
 
 # We don't need an ingress for this demo
 ingress:
@@ -28,6 +28,9 @@ env:
 seraphConfig:
   port: 8080
   workers: 3
+  llm:
+    provider: "gemini"
+    model: "gemini-2.5-flash-lite"
   # Filter out Seraph's own logs and common noise to prevent feedback loops
   preFilters:
     # - 'fluent'  # Commented out - this was blocking ALL Fluent Bit logs
